# AoC-2024-pico

./: buildall  buildday  dayboard.cmake  lxbuildall  lxbuildday  lxrunall  lxrunday
day01/: CMakeLists.txt  day01.cpp  day01.txt
day02/: CMakeLists.txt  day02.cpp  day02.txt
day03/: CMakeLists.txt  day03.cpp  day03.txt
day04/: CMakeLists.txt  day04.cpp  day04.txt
day05/: CMakeLists.txt  day05.cpp  day05.txt
day06/: CMakeLists.txt  day06.cpp  day06.txt
day07/: CMakeLists.txt  day07.cpp  day07.txt
day08/: CMakeLists.txt  day08.cpp  day08.txt
day09/: CMakeLists.txt  day09.cpp  day09.txt
day10/: CMakeLists.txt  day10.cpp  day10.txt
day11/: CMakeLists.txt  day11.cpp  day11.txt
day12/: CMakeLists.txt  day12.cpp  day12.txt
day13/: CMakeLists.txt  day13.cpp  day13.txt
day14/: CMakeLists.txt  day14.cpp  day14.txt
day15/: CMakeLists.txt  day15.cpp  day15.txt
day16/: CMakeLists.txt  day16.c  day16.cpp  day16.txt
day17/: CMakeLists.txt  day17.cpp  day17.txt
day18/: CMakeLists.txt  day18.cpp  day18.txt
day19/: CMakeLists.txt  day19.cpp  day19.txt
day20/: CMakeLists.txt  day20.cpp  day20.txt
day21/: CMakeLists.txt  day21.cpp  day21.txt
day22/: day22.cpp  day22.txt
day23/: CMakeLists.txt  day23.cpp  day23.txt
day24/: CMakeLists.txt  day24.cpp  day24.txt
day25/: CMakeLists.txt  day25.cpp  day25.txt
pico/: stdlib.h
